# nonebot-plugin-yijing

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml
docs/: data-collation.md  deployment-smoke-test.md  release.md  server-smoke-test.md  todo-2026-07-08-progress.md
nonebot_plugin_yijing/: __init__.py  config.py  models.py  permissions.py  utils.py
nonebot_plugin_yijing/commands/: main.py
nonebot_plugin_yijing/core/: caster.py  data.py  hexagram.py  interpret.py  llm_models.py  manual.py
nonebot_plugin_yijing/data/: README.en.md  README.md  casting_rules.json  guaci.json  hexagrams.json  interpret_rules.json  lines.json  relations.json  reserved_tables.json  shuogua.json  sources.json  special_texts.json  trigrams.json  tuan.json  wenyan.json  xiang.json  xici_shang.json  xici_xia.json  xugua.json  yaoci.json  zagua.json
nonebot_plugin_yijing/data/schemas/: casting_rules.schema.json  chapter_text.schema.json  guaci.schema.json  hexagrams.schema.json  interpret_rules.schema.json  lines.schema.json  manifest.json  relations.schema.json  reserved_extension.schema.json  reserved_tables.schema.json  sources.schema.json  special_texts.schema.json  trigrams.schema.json  tuan.schema.json  wenyan.schema.json  xiang.schema.json  yaoci.schema.json
nonebot_plugin_yijing/migrations/: 20260708_01_initial_yijing_tables.py  20260708_02_add_group_setting_windows.py  20260709_01_add_cast_trace.py  20260710_01_add_llm_privacy_notice.py  8f2b7c4a1d00_init_yijing.py  __init__.py
nonebot_plugin_yijing/render/: html.py  message.py
nonebot_plugin_yijing/services/: llm.py  payload.py  repository.py
nonebot_plugin_yijing/templates/: base.html  card.html  help.html  history.html  notice.html  settings.html
scripts/: fetch_wikisource_corpus.py
tests/: conftest.py  test_adapter_support.py  test_casting.py  test_commands.py  test_data_files.py  test_data_integrity.py  test_data_load.py  test_data_schema.py  test_env_docs.py  test_hexagrams.py  test_lines.py  test_llm_schema.py  test_manual.py  test_migrations.py  test_models.py  test_payload.py  test_repository.py  test_resolve.py  test_templates.py
