[project]
name = "nonebot-plugin-yijing"
version = "0.1.0"
description = "群内自助进行基于《周易》的起卦、查卦与解卦的 NoneBot2 插件"
authors = [
    { name = "YG W", email = "example@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
keywords = ["nonebot", "nonebot2", "yijing", "iching", "zhouyi", "qqbot"]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.3.0",
    "nonebot-plugin-alconna>=0.50.0",
    "nonebot-plugin-htmlrender>=0.6.0",
    "nonebot-plugin-orm[sqlite]>=0.7.0",
    "nonebot-plugin-localstore>=0.7.0",
    "nonebot-plugin-access-control>=1.2.4",
    "nonebot-plugin-access-control-api>=1.1.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.10.0",
    "SQLAlchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-name/nonebot-plugin-yijing"
Documentation = "https://github.com/your-name/nonebot-plugin-yijing#readme"
Repository = "https://github.com/your-name/nonebot-plugin-yijing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nonebot_plugin_yijing*"]

[tool.setuptools.package-data]
nonebot_plugin_yijing = [
    "data/*.json",
    "data/*.md",
    "templates/*.html",
    "migrations/*.py",
]

[tool.nonebot]
plugins = ["nonebot_plugin_yijing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
