[project]
name = "nonebot-plugin-yijing"
version = "0.1.1"
description = "群内自助进行基于《周易》的起卦、查卦与解卦的 NoneBot2 插件"
authors = [
    { name = "YG W" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["nonebot", "nonebot2", "yijing", "iching", "zhouyi", "qqbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nonebot2>=2.5.0",
    "nonebot-adapter-onebot>=2.3.0",
    "nonebot-plugin-alconna>=0.50.0",
    "nonebot-plugin-htmlrender>=0.7.1",
    "nonebot-plugin-orm[sqlite]>=0.7.0",
    "nonebot-plugin-localstore>=0.7.0",
    "nonebot-plugin-access-control>=1.2.4",
    "nonebot-plugin-access-control-api>=1.1.0",
    "playwright>=1.60.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.10.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/newcovid/nonebot-plugin-yijing"
Documentation = "https://github.com/newcovid/nonebot-plugin-yijing#readme"
Repository = "https://github.com/newcovid/nonebot-plugin-yijing"
Issues = "https://github.com/newcovid/nonebot-plugin-yijing/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nonebot_plugin_yijing*"]

[tool.setuptools.package-data]
nonebot_plugin_yijing = [
    "data/**/*.json",
    "data/**/*.md",
    "templates/**/*.html",
    "templates/**/*.css",
    "migrations/**/*.py",
]

[tool.nonebot]
plugins = ["nonebot_plugin_yijing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
